--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="../jinja.js"></script>
+    <script src="../jinja.min.js"></script>
 </head>
 <body>
 </body>
