--- a/test/test.html
+++ b/test/test.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <script src="../bower_components/fetch/fetch.js"></script>
     <script src="../jinja.min.js"></script>
 </head>
 <body>
 </body>
 <script>
-    jinja.render('<div>{{ test }}</div>',{test:"it works!"}).then(function(html){
+    jinja.template_url = '/jinjajs/test/';
+    jinja.render('{% include "include.html" %}',{test:"it works!"}).then(function(html){
         document.body.innerHTML = html;
     });
 </script>
